<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/search_image"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/search_image"
        android:visibility="visible"/>

    <LinearLayout
        android:id="@+id/click_search_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="visible"
        android:layout_marginTop="20dp">

        <TextView
            android:textColor="@color/grey"
            style="@style/text_black_blue_25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click"/>

        <ImageView
            android:layout_gravity="center"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_search_24_black" />

        <TextView
            android:textColor="@color/grey"
            style="@style/text_black_blue_25sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/to_search_user"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/no_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:src="@drawable/octocat"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/no_data"
            android:textAlignment="center"
            android:textColor="@color/black_blue"
            android:textSize="25sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/activityMainProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

    </androidx.recyclerview.widget.RecyclerView>


</LinearLayout>